--- a/solve_formula.ipynb
+++ b/solve_formula.ipynb
@@ -1,6 +1,17 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "以下の微分方程式をオイラー法・後退オイラー法・クランクニコルソン法で数値的にとく．\n",
+    "\n",
+    "$$\n",
+    "\\begin{array} { c } { \\frac { \\partial } { \\partial t } u ( t ) = + 998 u ( t ) + 1998 v ( t ) } \\\\ { \\frac { \\partial } { \\partial t } v ( t ) = - 999 u ( t ) - 1999 v ( t ) } \\\\ { u ( 0 ) = 1 , v ( 0 ) = 0 } \\end{array}\n",
+    "$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 42,
    "metadata": {},
@@ -298,7 +309,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
