--- a/solve_partial_differential.ipynb
+++ b/solve_partial_differential.ipynb
@@ -1,6 +1,19 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "次の偏微分方程式を空間座標xに対して離散化し，\n",
+    "Euler法・Exponential Euler法・Rosenbrock Euler法で数値的にとく．\n",
+    "\n",
+    "$$\n",
+    "\\frac { \\partial } { \\partial t } u ( x , t ) = \\frac { \\partial ^ { 2 } } { \\partial x ^ { 2 } } u ( x , t ) + \\frac { 2 u ( x , t ) } { x ( 1 - x ) } - x ( 1 - x ) \\sin ( t ) \\\\\n",
+    "\\begin{array} { l l } { 0 \\leq x \\leq 1 , } & { u ( 0 , t ) = u ( 1 , t ) = 0 } \\\\ { 0 \\leq t \\leq 2 \\pi , } & { u ( x , 0 ) = x ( 1 - x ) } \\end{array}\n",
+    "$$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 360,
    "metadata": {},
@@ -430,7 +443,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.0"
   }
  },
  "nbformat": 4,
